Add a new site slogan

--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 8a97774a-83d0-4c9b-a674-024460bbc8e0
 name: drupal-canon-test
 mail: anthony.klose@gmail.com
-slogan: ''
+slogan: 'Canonical Drupal 8 base for Top Floor Tech'
 page:
   403: ''
   404: ''
