--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "drupal/console": "^1.0.0-rc8",
     "drush/drush": "~8",
     "drupal/config_installer": "^1.0",
-    "drupal/config_direct_save": "^1.0",
-    "drupal/paragraphs": "^1.1"
+    "drupal/config_direct_save": "^1.0"
   },
   "require-dev": {
     "mikey179/vfsstream": "^1.2",
